--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ header section {
   margin-bottom: 3vh;
 }
 
+main ul li:nth-child(odd) {
+  background-color: rgba(210, 210, 210, .4);
+}
+
 /* Tailwind Breakpoint Media Queries */
 
 /* sm */
@@ -60,12 +64,3 @@ header section {
 @media (min-width: 1536px) {
 
 }
-
-
-/* temporary */
-/* main {
-  /* padding: 300px 0px; */
-  /* margin: 50px 0px; */
-} */
-
-
